fix form message on mobile

--- a/src/styles/blocks/intro.scss
+++ b/src/styles/blocks/intro.scss
@@ -177,7 +177,7 @@
 			margin-top: 32rem;
 
 			&.is-open form {
-				height: 120rem;
+				height: 140rem;
 			}
 		}
 	}
